# rm-pad

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  rm-mouse.toml.example  rm-pad.toml.example
.cursor/rules/: agent-workflow.mdc
.github/workflows/: ci.yml  release.yml
data/: 50-uinput.rules  70-remarkable-pen.rules  70-remarkable-touch-rel.rules  70-remarkable-touch.rules  remarkable-pen.tablet  rm-pad.service
grabber/: Makefile  README.md  grabber.c
helper/: evgrab.c
rm-client-screen/: Cargo.toml
rm-client-screen/src/: direct_fb.rs  main.rs
rm-common/: Cargo.toml  build.rs
rm-common/src/: epdc_align.rs  grab.rs  lib.rs  orientation.rs  protocol.rs  screen_client.rs
rm-common/src/config/: cli.rs  mod.rs
rm-common/src/device/: detect_ssh.rs  mod.rs  rm2.rs
rm-pad/: Cargo.toml  build.rs
rm-pad/src/: dump.rs  main.rs  palm.rs
rm-pad/src/input/: pen.rs  touch.rs
rm-screen/: Cargo.toml
rm-screen/src/: main.rs
src/: config.rs  dump.rs  event.rs  grab.rs  main.rs  orientation.rs  palm.rs  pen.rs  ssh.rs  touch.rs
src/config/: cli.rs  file.rs  mod.rs
src/device/: mod.rs  rm2.rs  rmpp.rs
src/input/: event.rs  mod.rs  pen.rs  touch.rs
