[package]
name = "rm-common"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["ssh"]
ssh = ["dep:ssh2", "dep:sha2"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10", optional = true }
ssh2 = { version = "0.9.5", optional = true }
toml = "0.8"

[build-dependencies]
